--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.19.1'
+	testImplementation 'org.jsoup:jsoup:1.17.2'
 }
 
 tasks.named('test') {
