--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.19.1'
-	testImplementation 'org.jsoup:jsoup:1.17.2'
+	implementation group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.50.0'
 }
 
 tasks.named('test') {
