--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -16,7 +16,7 @@ spring:
       ddl-auto: create
     properties: 
       hibernate:
-        show_sql: true
+        show_sql: false
         format_sql: true
 
 logging:
